--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,6 +177,13 @@ h1 {
     margin: 5px;
 }
 
+.team1 h4,
+.team2 h4 {
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 5px;
+}
+
 .team1 h3 p,
 .team2 h3 p {
     margin-left: 6px;
@@ -184,7 +191,12 @@ h1 {
 }
 
 ul {
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    flex-direction: row;
+    flex-wrap: wrap;
     margin: 0 0 20px 0;
     font-weight: 700;
     font-size: 20px;
@@ -313,4 +325,36 @@ input:hover {
 
 .close-btn:hover {
     background-color: #fff;
+}
+
+/************ Try again******************** */
+
+.try-again {
+    z-index: 11;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 20%;
+    height: 20%;
+}
+
+.again-btn { 
+    display: none;
+    cursor: pointer;
+    width: 100%;
+    height: 90%; 
+    border-radius: 12px;
+    border: none;
+    font-weight: 700;
+    transition: 0.3s;
+    background-color: rgb(243, 185, 9);
+    -webkit-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+-moz-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+} 
+
+.again-btn:hover {
+    background-color: rgb(247, 12, 12);
+
 }
