--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,16 +22,17 @@ body {
     --addPlayerWrapperColor: rgb(96, 87, 87);
     --applyBtnColor: rgb(178, 234, 253);
     --applyBtnHr: rgb(59, 142, 170);
+    --shadowColor: rgba(53, 48, 48, 0.722);
 } 
 
 .app-wrapper {
-    height: 100vh;
+    height: 100vh; 
     width: 1300px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-}
+} 
 
 h1 img {
     margin-top: 20px;
@@ -42,6 +43,7 @@ h1 img {
     border-radius: 20px;
     padding: 10px;
     width: 1200px;
+    
     margin-bottom: 10px;
     -webkit-box-shadow: 0px 0px 31px 0px rgba(247, 245, 245, 1);
     -moz-box-shadow: 0px 0px 31px 0px rgba(247, 245, 245, 1);
@@ -57,6 +59,7 @@ h1 img {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative; 
     
 }
 
@@ -344,32 +347,47 @@ input:hover {
 /************ Try again******************** */
 
 .try-again {
-    z-index: 11;
+    display: none; 
+    z-index: 1000;
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 20%;
-    height: 20%;
+    height: 15%;
 }
 
 .again-btn {  
-    display: none;
+    
     cursor: pointer;
-    width: 120%;
-    height: 100%; 
+    width: 100%;
+    height: 90%; 
     border-radius: 12px;
     border: none;
     font-size: 25px;
     font-weight: 700;
     transition: 0.3s;
     background-color: var(--removePlayerBtn);
-    -webkit-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
-    -moz-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
-    box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+    -webkit-box-shadow: 8px 8px 24px 0px rgb(26, 27, 37);
+    -moz-box-shadow: 8px 8px 24px 0px rgb(17, 18, 29);
+    box-shadow: 8px 8px 24px 0px rgb(13, 14, 28);
 }  
 
 .again-btn:hover {
-    background-color: rgb(247, 12, 12);
+    background-color: var(--mainColor);
 
+} 
+
+.shadow {
+    display: none;
+    background-color: var(--shadowColor);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 12px;
+    
+    
 }
